tests/spec/fail/keyword_only_positional.aja
fuc greet(name: str, *, prefix: str) -> str:
    return prefix + " " + name

print(greet("Aja", "Hi"))
